/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.giftpack;

import "doodle/design/common/pagination.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.giftpack";
option java_outer_classname = "GiftPackProto";

enum GiftPackErrorCode {
  FAILURE = 0;
}

message PackCodeInfo {
  int32 pack_id = 1;
  string pack_code = 2;
  string content = 3;
}

message PackCodeInfoList {
  repeated PackCodeInfo pack_code = 1;
}

enum PackPlaceType {
  TIME_BASE = 0;
  TIME_HASH = 1;
}

message PackPlaceInfo {
  PackCodeInfo pack_code = 1;
  PackPlaceType type = 2;
  int32 batch = 3;
  int32 quantity = 4;
}

message PackPlaceInfoList {
  repeated PackPlaceType pack_place = 1;
}

message GiftPackCodeCreateRequest {
  string pack_code = 1;
  string content = 2;
}

message GiftPackCodeCreateReply {
  oneof Result {
    GiftPackErrorCode error = 1;
    PackCodeInfo payload = 2;
  }
}

message GiftPackCodeQueryRequest {
  string pack_code = 1;
}

message GiftPackCodeQueryReply {
  oneof Result {
    GiftPackErrorCode error = 1;
    PackCodeInfo payload = 2;
  }
}

message GiftPackCodePageRequest {
  doodle.design.common.PageRequest page = 1;
}

message GiftPackCodePageReply {
  oneof Result {
    GiftPackErrorCode error = 1;
    PackCodeInfoList payload = 2;
  }
}

message GiftPackPlaceQueryRequest {
  string pack_code = 1;
}

message GiftPackPlaceQueryReply {
  oneof Result {
    GiftPackErrorCode error = 1;
    PackPlaceInfoList payload = 2;
  }
}

message GiftPackPlacePageRequest {
  doodle.design.common.PageRequest page = 2;
}

message GiftPackPlacePageReply {
  oneof Result {
    GiftPackErrorCode error = 1;
    PackPlaceInfoList payload = 2;
  }
}

message GiftPackUseRequest {
  string pack_code = 1;
}

message GiftPackUseReply {
  oneof Result {
    GiftPackErrorCode error = 1;
    PackCodeInfo payload = 2;
  }
}
