/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.giftpack;

import "doodle/design/giftpack/giftpack_struct.proto";
import "doodle/design/common/pagination.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.giftpack";
option java_outer_classname = "GiftPackVisionProto";

message GiftPackVisionQueryRequest {
  string vision_id = 1;
}

message GiftPackVisionQueryReply {
  oneof Result {
    GiftPackErrorCode error = 1;
    VisionInfo payload = 2;
  }
}

message GiftPackVisionPageRequest {
  doodle.design.common.PageRequest page = 1;
}

message GiftPackVisionPageReply {
  oneof Result {
    GiftPackErrorCode error = 1;
    VisionInfoList payload = 2;
  }
}




