/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.payment;

option java_multiple_files = true;
option java_package = "org.doodle.design.payment";
option java_outer_classname = "PaymentProto";


message PaymentOrderDeliverRoute {
  message ServletDeliverRoute {
    string uri = 1;
  }
  message RSocketDeliverRoute {
    map<string, string> tags = 1;
  }
  oneof RouteMethod {
    ServletDeliverRoute servlet = 1;
    RSocketDeliverRoute rsocket = 2;
  }
}

message PaymentOrderInfo {
  string order_id = 1;
  string account_id = 2;
  string role_id = 3;
  string role_name = 4;
  string server_id = 5;
  string server_name = 6;
  string amount = 7;
  string product_id = 8;
  string product_name = 9;
  string product_price = 10;
}

message EmbeddedPaymentOrderInfo {
  string order_id = 1;
  string account_id = 2;
  string role_id = 3;
  string role_name = 4;
  string server_id = 5;
  string server_name = 6;
  string amount = 7;
  string product_id = 8;
  string product_name = 9;
  string product_price = 10;
}

message JgPaymentOrderInfo {
  string callback_url = 1;
  string extension = 2;
  string order_id = 3;
  string party_name = 4;
  string per_price = 5;
  string product_desc = 6;
  string product_id = 7;
  string product_name = 8;
  int32 ratio = 9;
  int32 remain_coin_num = 10;
  string role_id = 11;
  int32 role_level = 12;
  string role_name = 13;
  string server_id = 14;
  string server_name = 15;
  int32 total_price = 16;
  string vip = 17;
}

message EmbeddedPaymentOrderCreateRequest {
  string account_id = 1;
  string role_id = 2;
  string role_name = 3;
  string server_id = 4;
  string server_name = 5;
  string amount = 6;
  string product_id = 7;
  string product_name = 8;
  string product_price = 9;
  PaymentOrderDeliverRoute route = 10;
}

message EmbeddedPaymentOrderCreateReply {
  oneof Result {
    PaymentErrorCode error = 1;
    EmbeddedPaymentOrderInfo payload = 2;
  }
}

message JgPaymentOrderCreateRequest {
  string account_id = 1;
  string role_id = 2;
  string role_name = 3;
  string server_id = 4;
  string server_name = 5;
  int32 total_price = 6;
  string product_id = 7;
  string product_name = 8;
  int32 per_price = 9;
  PaymentOrderDeliverRoute route = 10;
}

message JgPaymentOrderCreateReply {
  oneof Result {
    PaymentErrorCode error = 1;
    JgPaymentOrderInfo payload = 2;
  }
}

message PaymentOrderDeliverRequest {
  PaymentOrderInfo order_info = 1;
}

message PaymentOrderDeliverReply {
  PaymentErrorCode error_code = 1;
}

enum PaymentErrorCode {
  SUCCESS = 0;
  FAILURE = 1;
  EMBEDDED_ORDER_CREATE_FAILURE = 2;
  JG_ORDER_CREATE_FAILURE = 3;
  DELIVER_ORDER_FAILURE = 4;
}
